--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ string som parameter.
 
 Hvis stringen begynner med en bokstav skal denne gjøres om til uppercase, 
 slik at om du sender inn "terje" blir det gjort om til "Terje". -->
+
+<script>
+    
+</script>
     
 </body>
 </html>
